--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel&display=swap");
+
 .App {
   text-align: center;
 }
@@ -25,6 +27,10 @@
   color: white;
 }
 
+h1 {
+  font-family: "Cinzel", serif;
+}
+
 .App-link {
   color: #61dafb;
 }
@@ -44,13 +50,14 @@ button {
   border-radius: 8px;
   cursor: pointer;
   border: 0;
+  margin: 16px;
 }
 
 .buttons {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  width: 80%;
+  width: 500px;
   padding: 1rem;
 }
