feat: add basic styles and main components

--- a/src/components/Iroh/Iroh.module.scss
+++ b/src/components/Iroh/Iroh.module.scss
@@ -1,6 +1,13 @@
+@import "../../styles/mixins.scss";
+
 .wrapper {
-  max-width: 300px;
-  height: 300px;
+  @include alignCenter;
+  @include baseCard;
+
+  svg {
+    max-height: 260px;
+    max-width: 260px;
+  }
 }
 
 .mouth {
