--- a/src/components/TextBox/TextBox.module.scss
+++ b/src/components/TextBox/TextBox.module.scss
@@ -1,16 +1,14 @@
-@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
+@import "../../styles/mixins.scss";
 
 .wrapper {
+  @include baseCard;
+
   font-family: "Anonymous Pro", monospace;
   color: #282c34;
   background: #fff;
   border-radius: 8px;
-  padding: 20px;
-  width: 500px;
-  height: 100px;
   font-size: 16px;
   text-align: left;
-  margin: 1rem;
 }
 
 .tick {
