feat: use pixi and pixi-spine, downgrade react to 17 to make it work

--- a/src/components/GameView/GameView.module.scss
+++ b/src/components/GameView/GameView.module.scss
@@ -17,3 +17,12 @@
 .sidebar {
   grid-area: 1 / 4 / 5 / 5;
 }
+
+// TODO
+
+@import "../../styles/mixins.scss";
+
+.temporary {
+  @include alignCenter;
+  @include baseCard;
+}
